Remove script and answers

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head> 
+</head>
 
 <body>
 
@@ -25,48 +25,45 @@
 
       <h1>FAQ</h1>
 
-      <button id="0" type="button" name="button">
+      <button class="one" type="button" name="button">
         How many team members can I invite?
         <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
       </button>
-      <span>You can invite up to 2 additional users on the Free plan. There is no limit on
-        team members for the Premium plan.</span>
+      
       <hr>
 
-      <button id="1" type="button" name="button">
+      <button class="two" type="button" name="button">
         What is the maximum file upload size?
         <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
       </button>
-      <span>No more than 2GB. All files in your account must fit your allotted storage space.</span>
+
       <hr>
 
-      <button id="2" type="button" name="button">
+      <button class="three" type="button" name="button">
         How do I reset my password?
         <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
       </button>
-      <span>Click “Forgot password” from the login page or “Change password” from your profile page.
-        A reset link will be emailed to you.</span>
+
       <hr>
 
-      <button id="3" type="button" name="button">
+      <button class="four" type="button" name="button">
         Can I cancel my subscription?
         <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
       </button>
-      <span>Yes! Send us a message and we’ll process your request no questions asked.</span>
+
       <hr>
 
-      <button id="4" type="button" name="button">
+      <button class="five" type="button" name="button">
         Do you provide additional support?
         <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
       </button>
-      <span>Chat and email support is available 24/7. Phone lines are open during normal business hours.</span>
+
       <hr>
 
     </article>
 
   </main>
 
-  <script src="script.js" charset="utf-8"></script>
 </body>
 
 </html>
