--- a/index.html
+++ b/index.html
@@ -10,59 +10,86 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head> 
+</head>
 
 <body>
 
   <main>
 
-    <article class="bg">
+    <section class="bg-area">
       <img class="box" src="images/illustration-box-desktop.svg" alt="box image">
       <img class="woman" src="images/illustration-woman-online-mobile.svg" alt="woman image">
-    </article>
+    </section>
 
-    <article class="faq">
+    <section class="faq-area">
 
       <h1>FAQ</h1>
 
-      <button id="0" type="button" name="button">
-        How many team members can I invite?
-        <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
-      </button>
-      <span>You can invite up to 2 additional users on the Free plan. There is no limit on
-        team members for the Premium plan.</span>
+      <div class="faq">
+
+        <div class="btn">
+          <p> How many team members can I invite?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
+        </div>
+
+        <div class="answer">
+          <span>You can invite up to 2 additional users on the Free plan. There is no limit on
+            team members for the Premium plan.</span>
+        </div>
+
+      </div>
+
       <hr>
 
-      <button id="1" type="button" name="button">
-        What is the maximum file upload size?
-        <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
-      </button>
-      <span>No more than 2GB. All files in your account must fit your allotted storage space.</span>
+      <div class="faq">
+        <div class="btn">
+          <p>What is the maximum file upload size?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
+        </div>
+        <div class="answer">
+          <span>No more than 2GB. All files in your account must fit your allotted storage space.</span>
+        </div>
+
+      </div>
+
       <hr>
 
-      <button id="2" type="button" name="button">
-        How do I reset my password?
-        <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
-      </button>
-      <span>Click “Forgot password” from the login page or “Change password” from your profile page.
-        A reset link will be emailed to you.</span>
+      <div class="faq">
+        <div class="btn">
+          <p>How do I reset my password?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
+        </div>
+        <div class="answer">
+          <span>Click “Forgot password” from the login page or “Change password” from your profile page.
+            A reset link will be emailed to you.</span>
+        </div>
+      </div>
+
       <hr>
 
-      <button id="3" type="button" name="button">
-        Can I cancel my subscription?
-        <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
-      </button>
-      <span>Yes! Send us a message and we’ll process your request no questions asked.</span>
+      <div class="faq">
+        <div class="btn">
+          <p>Can I cancel my subscription?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
+        </div>
+        <div class="answer">
+          <span>Yes! Send us a message and we’ll process your request no questions asked.</span>
+        </div>
+      </div>
       <hr>
 
-      <button id="4" type="button" name="button">
-        Do you provide additional support?
-        <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
-      </button>
-      <span>Chat and email support is available 24/7. Phone lines are open during normal business hours.</span>
+      <div class="faq">
+        <div class="btn">
+          <p>Do you provide additional support?</p>
+          <img class="arrow" src="images/icon-arrow-down.svg" alt="arrow icon">
+        </div>
+        <div class="answer">
+          <span>Chat and email support is available 24/7. Phone lines are open during normal business hours.</span>
+        </div>
+      </div>
       <hr>
 
-    </article>
+    </section>
 
   </main>
 
